kubernetes_demo_1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-service
spec:
  type: ClusterIP
  selector:
    app: k8s-demo-app
  ports:
    - port: 8080
      targetPort: 8080
