kubernetes_demo_1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-app-ingress-1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: k8s-demo-app-service
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-app-ingress-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /name/$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: k8s-demo-app-service
                port:
                  number: 8080
